adds a name feature to the form

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <p class = "header"><strong>Answer the questions below to discover the best progamming language for you.</strong></p>
     <h3>Questions:</h3>
     <form id="form0ne">
+      <div class="form-group">
+        <label for="firstName">Enter your name: </label>
+        <input id="firstName" class="form-control" type="text">
+      </div>
       <div class="radio">
         <h5>What programming subject do you prefer?</h5>
         <label>
